--- a/app/Resources/views/thread/part/post-form.html.twig
+++ b/app/Resources/views/thread/part/post-form.html.twig
@@ -1,6 +1,7 @@
 <div class="panel panel-default">
   <div class="panel-heading">{{'thread.reply.publish'|trans}}</div>
   <div class="panel-body">
-    {{ render(controller('AppBundle:Thread:post', {request:app.request, threadId:thread.id})) }}
+  {{dump(target)}}
+    {{ render(controller('AppBundle:Thread:post', {request:app.request, threadId:thread.id, target: target})) }}
   </div>
 </div>
