--- a/app/Resources/views/admin-v2/teach/course-set/index.html.twig
+++ b/app/Resources/views/admin-v2/teach/course-set/index.html.twig
@@ -89,7 +89,11 @@
 
       
       <th>{{ 'admin.course_manage.manage.creator'|trans }}</th>
-      <th>{{ 'admin.course_manage.manage.status'|trans }}</th>
+      <th>{{ 'admin.course_manage.manage.status'|trans }}
+      <span class="es-icon es-icon-wenhaotishi" 
+          style="color: #919399;font-size: 14px;" 
+          data-toggle="tooltip" 
+          title="{{ 'admin.setting.table.status.tooltip'|trans }}"></span></th>
       <th width="10%">{{'admin.course_manage.operater'|trans}}</th>
     </tr>
     </thead>
