--- a/app/Resources/views/admin-v2/teach/classroom/index.html.twig
+++ b/app/Resources/views/admin-v2/teach/classroom/index.html.twig
@@ -4,8 +4,10 @@
 
 {% block main %}
 <style>
-.tooltip {
-  width: 282px !important;
+.status_tooptip_intro {
+  .tooltip-inner {
+      max-width: max-content !important;
+    }
 }
 </style>
   <form id="message-search-form" class="form-inline well well-sm" action="" method="get" novalidate>
@@ -58,7 +60,7 @@
         <th>{{ 'admin.classroom_manage.manage.course_number_th'|trans }}</th>
         <th>{{ 'admin.classroom_manage.manage.student_number_th'|trans }}</th>
         <th width="12%">{{ 'admin.classroom_manage.manage.price_th'|trans }}</th>
-        <th>{{ 'admin.classroom_manage.manage.status_th'|trans }}
+        <th class="status_tooptip_intro">{{ 'admin.classroom_manage.manage.status_th'|trans }}
         <span class="es-icon es-icon-wenhaotishi" 
           style="color: #919399;font-size: 14px;" 
           data-toggle="tooltip" 
