--- a/app/Resources/views/task/show.html.twig
+++ b/app/Resources/views/task/show.html.twig
@@ -40,7 +40,7 @@
         {% endif %}
       </div>
       <div class="dashboard-body">
-      {{dump(taskResult)}}
+      {# {{dump(taskResult)}} #}
         <div class="{% if task.type in ['exercise' , 'homework' ,'testpaper'] %} mobile-scroll-wrapper {% endif %} all-wrapper {% if task.type in ['video'] %} js-video-wrapper {% endif %}">
           <iframe id="task-content-iframe" class="task-content-iframe js-task-content-iframe" name="task-content-iframe"
             data-video-play-rule="{{ setting('videoEffectiveTimeStatistics.play_rule', 'no_action') }}"
