feat: #231206 题库下架不能加入

--- a/app/Resources/views/item-bank-exercise/header/header-for-guest.html.twig
+++ b/app/Resources/views/item-bank-exercise/header/header-for-guest.html.twig
@@ -133,7 +133,7 @@
           {% else %}
             {% if exercise.joinEnable|default(true) == false %}
               {{ 'item_bank_exercise.course_limited_tips'|trans }}
-            {% elseif exercise.status != 'published' %}
+            {% elseif exercise.status != 'published' and exercise.status != 'unpublished' %}
               {{ 'item_bank_exercise.unbuyable.unpublished_tips'|trans }}
             {% elseif (exercise.expiryMode in ['end_date', 'date'] and exercise.expiryEndDate < 'now'|date('U')) %}
               {{ 'course.unbuyable.over_expiry_end_date_tips'|trans }}
