--- a/app/Resources/views/course/header/header-layout.html.twig
+++ b/app/Resources/views/course/header/header-layout.html.twig
@@ -81,7 +81,7 @@
           {% endif %}
 
           <li class="es-share top js-es-share">
-            <a class="btn btn-default btn-xs dropdown-toggle {% if courseSet.status == 'closed'%}js-handleLearnOnMessage {% endif %}" href="" {% if courseSet.status != 'closed'%} data-toggle="dropdown" {% endif %} title="{{ 'course.share'|trans }}">
+            <a class="btn btn-default btn-xs dropdown-toggle {% if courseSet.canLearn == '0' %}js-handleLearnOnMessage {% endif %}" href="" {% if courseSet.canLearn != '0'%} data-toggle="dropdown" {% endif %} title="{{ 'course.share'|trans }}">
               <i class="es-icon es-icon-share"></i>
             </a>
             {% include 'common/share-dropdown.html.twig' with {type:'courseSet'} %}
