--- a/app/Resources/views/item-bank-exercise-manage/header.html.twig
+++ b/app/Resources/views/item-bank-exercise-manage/header.html.twig
@@ -9,6 +9,8 @@
     <span class="course-publish-status course-publish-status--unpublished">{{'course.status.unpublished'|trans}}</span>
   {% elseif item.status =='published' %}
     <span class="course-publish-status course-publish-status--published">{{'course.status.published'|trans }}</span>
+  {% elseif item.status =='unpublished' %}
+    <span class="course-publish-status course-publish-status--unpublished">{{'course.status.delist'|trans}}</span>
   {% endif %}
 
   <div class="courseset-manage-header-info">
