--- a/app/Resources/views/admin-v2/default/school-info.html.twig
+++ b/app/Resources/views/admin-v2/default/school-info.html.twig
@@ -56,17 +56,20 @@
 
 <div class="admin-link">
 <div class="cd-dropdown js-sass" data-toggle="cd-dropdown" data-trigger="hover">
-  <a class="admin-link__btn" href="{{ path('homepage') }}" target="_blank"><i class="es-icon es-icon-micronetwork-school"></i>{{ 'admin_v2.homepage.school_info.access_mobile_web'|trans }}</a>
-            <div class="dropdown-menu" style="width: 232px;left: -20px; padding: 20px 16px;">
-              <div class="school-share-container">
-              <div class="school-share-link js-copy-school_link">扫码打开微网校
-              <span class="school-share-divider">|<span>
-              <a class="school-share-copy">{{ 'admin_v2.homepage.school_info.enter.copy_btn'|trans }}</a>
-              </div>
-                <img id="js-marketing-qrcode3" style="width: 200px;">
-              </div>
-            </div>
-          </div>
+  <a class="admin-link__btn" style="width: 100%;" href="{{ path('homepage') }}" target="_blank">
+    <i class="es-icon es-icon-micronetwork-school"></i>
+    {{ 'admin_v2.homepage.school_info.access_mobile_web'|trans }}
+  </a>
+    <div class="dropdown-menu" style="width: 232px;left: -20px; padding: 20px 16px;">
+      <div class="school-share-container">
+        <div class="school-share-link js-copy-school_link">扫码打开微网校
+          <span class="school-share-divider">|</span>
+          <a class="school-share-copy">{{ 'admin_v2.homepage.school_info.enter.copy_btn'|trans }}</a>
+        </div>
+        <img id="js-marketing-qrcode3" style="width: 200px;" />
+      </div>
+    </div>
+  </div>
   <a {% if mobileEnabled %}class="admin-link__btn" href="{{ path('mobile') }}" target="_blank" {% else %}class="admin-link__btn admin-link__btn--disabled" data-toggle="tooltip" title="{{ 'admin_v2.homepage.school_info.no_access'|trans }}" href="{{ path('admin_v2_setting_mobile') }}"{% endif %}>{% if not mobileEnabled %}{% endif %}<i class="es-icon es-icon-app"></i>{{ 'admin_v2.homepage.school_info.access_mobile_app'|trans }}</a>
   <a {% if wechatAppStatus.installed|default(false) and wechatAppStatus.configured|default(false) %}class="admin-link__btn js-mini-program mb0" href="javascript:;" data-src="{{ miniProgramCodeImg.img_url|default() }}" {% else %}class="admin-link__btn admin-link__btn--disabled" data-toggle="tooltip" title="{{ 'admin_v2.homepage.school_info.no_access'|trans }}" href="{{ path('admin_v2_wechat_app') }}"{% endif %}>{% if not wechatAppStatus.installed %}{% endif %}<i class="es-icon es-icon-entry-miniprogram"></i>{{ 'admin_v2.homepage.school_info.access_wechat_app'|trans }}</a>
 </div>
