feat: #231213 题库查重终代码

--- a/app/Resources/static-src/app/less/page/question-bank/duplicative.less
+++ b/app/Resources/static-src/app/less/page/question-bank/duplicative.less
@@ -97,12 +97,12 @@
     .duplicate-body {
         background-color: #fff;
         max-height: calc(100% - 57px);
+        height: calc(100% - 57px);
         display: flex;
         align-items: stretch;
 
         .duplicate-question {
             width: 300px;
-            height: 758px;
             overflow: scroll;
             padding: 20px;
             border-right: 1px solid #F2F3F5;
@@ -111,7 +111,7 @@
 
         .duplicate-content {
             width: calc(100% - 304px);
-            max-height: 758px;
+            max-height: calc(100% - 57px);
             overflow: scroll;
             padding: 20px;
         }
