feat: #231218 查重页面列表不换行

--- a/app/Resources/static-src/app/less/page/question-bank/duplicative.less
+++ b/app/Resources/static-src/app/less/page/question-bank/duplicative.less
@@ -134,6 +134,8 @@
     }
 
     .duplicate-question-item {
+        display: flex;
+        align-items: center;
         margin-top: 16px;
         padding: 8px 12px;
         border-radius: 6px;
@@ -154,7 +156,6 @@
         text-overflow: ellipsis;
         white-space: nowrap;
         margin-right: 8px;
-        display: inline-block;
         color: #37393D;
         font-size: 14px;
         font-weight: 400;
@@ -162,8 +163,6 @@
     }
 
     .duplicate-question-check-count {
-        display: inline-block;
-        vertical-align: top;
         background-color: #FAFAFA;
         border-radius: 2px;
         border: 1px solid #DCDEE0;
