--- a/app/Resources/static-src/app/less/page/question-bank/duplicative.less
+++ b/app/Resources/static-src/app/less/page/question-bank/duplicative.less
@@ -100,11 +100,10 @@
         display: flex;
         align-items: stretch;
         height: calc(100vh - 58px);
-        overflow: scroll;
 
         .duplicate-question {
             width: 300px;
-            overflow: scroll;
+            overflow-y: scroll;
             padding: 20px;
             border-right: 1px solid #F2F3F5;
             border-bottom: 1px solid #F2F3F5;
@@ -115,7 +114,7 @@
             flex-direction: column;
             width: 100%;
             max-height: 100%;
-            overflow: scroll;
+            overflow-y: scroll;
             padding: 20px;
         }
     }
