--- a/app/Resources/static-src/app/less/page/question-bank/duplicative.less
+++ b/app/Resources/static-src/app/less/page/question-bank/duplicative.less
@@ -168,7 +168,8 @@
         background-color: #FAFAFA;
         border-radius: 2px;
         border: 1px solid #DCDEE0;
-        width: 48px;
+        min-width: 48px;
+        max-width: max-content;
         text-align: center;
         padding: 1px 8px;
         color: #5E6166;
